<resources>
    <string name="app_name">Exam1</string>
    <string name="action_settings">Settings</string>
    <string name="default_what">What will you give?</string>
    <string name="default_who">Who is this gift for?</string>
    <string name="gift">Gift</string>
    <string name="Recipient">Recipient</string>
    <string name="enter">ENTER</string>
    <string name="shop_list">Shopping List</string>
    <string name="dialogTitle">Choose a recipient to toggle importance</string>
</resources>
